--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 chrome-profiler-events*.json
 speed-measure-plugin*.json
 
+# private environment variables
+/src/env.json
+
 # IDEs and editors
 /.idea
 .project
