--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ chrome-profiler-events*.json
 speed-measure-plugin*.json
 
 # private environment variables
-/src/env.json
+/src/api_keys.js
 
 # IDEs and editors
 /.idea
