--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "env": "0.0.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "process-env": "^1.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
