--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.1.0",
+    "plotly.js": "^1.55.2",
     "popper.js": "^1.16.1",
     "process-env": "^1.1.0",
     "rxjs": "~6.5.5",
