--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "angular-plotly.js": "^3.0.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.1.0",
